# Verkel_Hypergraph_Provenance_Agentic_AI_System

./: .gitignore  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_benchmarks.py  tailwind.config.js
data/: drugbank_loader.py
paper/: VHP_IMPLEMENTATION_REFERENCE.py  drugbankusage.txt  vhp_paper.tex  vhp_prototype.py
paper_benchmarks/: benchmark_results.json  benchmark_results.tex
src/: App.tsx  index.css
src/api/: client.ts  dependencies.py  main.py
src/api/routers/: audit.py  benchmark.py  hypergraph.py  provenance.py  reasoning.py  symptom.py  verkle.py
src/pages/: Benchmarks.tsx  Dashboard.tsx  Hypergraph.tsx  Provenance.tsx  Reasoning.tsx  SymptomChecker.tsx  Verkle.tsx
src/vhp/: __init__.py  audit.py  crypto.py  graphrag.py  hypergraph.py  pipeline.py  provenance.py  reasoning.py  serialization.py  verkle.py
tests/: conftest.py  test_audit.py  test_hypergraph.py  test_integration.py  test_provenance.py  test_verkle.py
